--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
   <main>
-    <canvas id="canvas"></canvas>
+    <canvas width="500" height="500" id="canvas"></canvas>
+
+    <div class="btns">
+      <button id="like">Like</button>
+      <button id='likes'>L-I-I-I-I-I-I-I-K-E-E-E-E!!!</button>
+    </div>
   </main>
   
   <script>
